
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Join the directories crypto/x509 and crypto/x509v3
     [Richard Levitte]

  *) Change the default RSA, DSA and DH size to 2048 bit instead of 1024.
     This changes the size when using the genpkey app when no size is given. It
     fixes an omission in earlier changes that changed all RSA, DSA and DH
     generation apps to use 2048 bits by default.
     [Kurt Roeckx]

  *) Added command 'openssl kdf' that uses the EVP_KDF API.
     [Shane Lontis]

   *) Added command 'openssl mac' that uses the EVP_MAC API.
     [Shane Lontis]

  *) Added OPENSSL_info() to get diverse built-in OpenSSL data, such
     as default directories.  Also added the command 'openssl info'
     for scripting purposes.
     [Richard Levitte]

  *) The functions AES_ige_encrypt() and AES_bi_ige_encrypt() have been
     deprecated. These undocumented functions were never integrated into the EVP
     layer and implement the AES Infinite Garble Extension (IGE) mode and AES
     Bi-directional IGE mode. These modes were never formally standardised and
     usage of these functions is believed to be very small. In particular
     AES_bi_ige_encrypt() has a known bug. It accepts 2 AES keys, but only one
     is ever used. The security implications are believed to be minimal, but
     this issue was never fixed for backwards compatibility reasons. New code
     should not use these modes.
     [Matt Caswell]

  *) Add prediction resistance to the DRBG reseeding process.
     [Paul Dale]

  *) Limit the number of blocks in a data unit for AES-XTS to 2^20 as
     mandated by IEEE Std 1619-2018.
     [Paul Dale]

  *) Added newline escaping functionality to a filename when using openssl dgst.